# Lost-n-Found-Desk

./: .env.example  .gitignore  ARTICLE.md  LICENSE  Makefile  README.md  VERSION_MATRIX.md  app.py  pyproject.toml  requirements.txt
codex_trace_dataset/: README.md  schema.json
codex_trace_dataset/data/: public_artifacts.jsonl  session_summary.jsonl  tool_events.jsonl  turns.jsonl
codex_trace_dataset/metadata/: derived_turns.json  public_artifacts.json  redaction_report.json  session_summary.json
docs/: article.md  social-post.md  submission-notes.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/: App.svelte  api.ts  gradioApi.ts  main.ts  router.ts  status.ts  types.ts
frontend/src/lib/: Home.svelte  PublicClaim.svelte  StaffConsole.svelte
frontend/src/lib/ui/: CopyButton.svelte  EmptyState.svelte  Icon.svelte  Logo.svelte  Skeleton.svelte  Spinner.svelte  theme.ts  (+5 more)
frontend/src/styles/: base.css  components.css  tokens.css
scripts/: build_codex_trace_dataset.py  build_demo_video.py
src/lost_found_desk/: config.py  conversation.py  embeddings.py  matching.py  prompts.py  retrieval.py  schemas.py  security.py  seed.py  services.py  storage.py  telemetry.py
src/lost_found_desk/models/: base.py  minicpm5.py  minicpm_v.py  mock.py
src/lost_found_desk/runtime/: device.py  gpu.py
static/: index.html
static/assets/: index-DWU9ZaXn.css  index-DdUi8ei-.js
tests/: test_claim_chat_prompt.py  test_conversation.py  test_matching.py  test_retrieval.py  test_storage.py
(+1 files in other folders)
