[project]
name = "lost-n-found-desk"
version = "0.1.0"
description = "Caption-first lost-and-found return desk (MiniCPM-V + MiniCPM5) with a custom Svelte frontend and OpenTelemetry observability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "av>=17.1.0",
    "fastapi>=0.136.3",
    "gradio==6.17.3",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-sdk>=1.27.0",
    "pillow>=12.2.0",
    "pydantic>=2.11.10,<2.12.6",
    "python-multipart>=0.0.32",
    "sentence-transformers>=3.0.0",
    "spaces>=0.50.4",
    "torch>=2.8.0,<2.12.0",
    "torchvision>=0.25.0,<0.27.0",
    "transformers[torch]>=5.11.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
]
